--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>2025新年烟花</title>
+    <title>2026新年烟花</title>
     <link rel="icon" type="image/x-icon" href="icon/favicon-f.ico">
     <link rel="stylesheet" href="documents/sweetalert2.min.css">
     <style>
@@ -357,7 +357,7 @@
     <audio id="bgm" src="music/music-f.mp3" loop>
     </audio>
     <div style="display: none">
-        <div class="shape">🏮2025新年快乐🏮</div>
+        <div class="shape">🏮2026新年快乐🏮</div>
         <div class="shape">🏮恭喜发财🏮</div>
         <div class="shape">🏮万事如意🏮</div>
         <div class="shape">🏮吉庆有余🏮</div>
@@ -378,7 +378,7 @@
     </div>
 
     <!-- 测试按钮组（右上角下方） -->
-    <div class="test-btn-group">
+    <!--<div class="test-btn-group">
         <div class="test-btn" id="test15sBtn">测试：倒数15秒</div>
         <div class="test-btn" id="test15m15sBtn">测试：倒数15分15秒</div>
     </div>
@@ -484,7 +484,7 @@
         window.addEventListener('load', () => {
             Swal.fire({
                 title: '您想要播放背景音乐吗?',
-                icon: 'warning',
+                icon: 'question',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
                 cancelButtonColor: '#d33',
