--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <title>2026新年烟花</title>
@@ -340,24 +340,6 @@
             .countdown-arrow.left { left: -18px; }
             .countdown-arrow.right { right: -18px; }
         }
-
-        /* ========== 新增 PiP 样式（只新增，不改原样式） ========== */
-        .pip-video-container {
-            position: fixed;
-            top: 80px;
-            right: 20px;
-            z-index: 99998;
-            display: none;
-            width: 320px;
-            height: 200px;
-            border-radius: 12px;
-            overflow: hidden;
-            background: #000;
-            border: 2px solid rgba(255,193,7,0.9);
-            box-shadow: 0 10px 40px rgba(0,0,0,0.6);
-        }
-        .pip-video-container video { width:100%; height:100%; object-fit:cover; display:block; }
-        #pipCanvas { display: none; }
     </style>
 </head>
 <body onselectstart="return false">
@@ -377,22 +359,23 @@
         <div class="shape">🏮财源广进🏮</div>
     </div>
 
+    <!-- ========== 新增：隐藏 Canvas + 隐藏 Video（用于 PiP 流） ========== -->
+    <!-- 这两个元素仅用于把倒计时镜像成视频流，不影响页面任何布局或样式 -->
+    <canvas id="pipCanvas" width="420" height="220" style="display:none"></canvas>
+    <video id="pipVideo" playsinline muted style="display:none"></video>
+
     <!-- ========== 新增：倒计时图层DOM元素 ========== -->
     <!-- 返回主页按钮（左上角） -->
     <a href="https://ericoec.github.io" class="back-home" target="_self">← 主页</a>
 
-    <!-- 控制按钮组（右上角：新增 PiP 按钮在全屏左边 + 全屏+隐藏UI） -->
+    <!-- 控制按钮组（右上角：全屏+隐藏UI） -->
     <div class="control-btn-group">
+        <!-- 新增：开启画中画按钮（放在全屏左边） -->
         <button class="control-btn" id="startPipBtn">开启画中画</button>
+
         <button class="control-btn" id="fullscreenBtn">全屏倒计时</button>
         <button class="control-btn" id="hideUiBtn">隐藏UI</button>
     </div>
-
-    <!-- 画中画容器（新增，参考 Code_20260102） -->
-    <div class="pip-video-container" id="pipWrapper">
-        <video id="pipVideo" playsinline muted autoplay loop></video>
-    </div>
-    <canvas id="pipCanvas" width="480" height="270"></canvas>
 
     <!-- 倒计时图层（默认左下角小窗口） -->
     <div class="countdown-layer small-window" id="countdownLayer">
@@ -980,104 +963,106 @@
         updateCountdown();
     </script>
 
-    <!-- ========== 新增画中画脚本（Code_20260102 同款） ========= -->
+    <!-- ========== 新增：PiP 同步脚本（严格独立，仅读 targets/activeKey/fiveMinutes） ========== -->
     <script>
     (function(){
-        // 高精度时间基准，用于 microseconds 估算
+        // 高精度时间基准（用于估计毫秒小数部分以得到微秒）
         const perfOffset = Date.now() - performance.now();
+        function highResNow() { return perfOffset + performance.now(); } // ms as float
 
-        function highResNow() {
-            return perfOffset + performance.now(); // ms as float
-        }
-
-        const pipCanvas = document.getElementById('pipCanvas'); // already present
+        const pipCanvas = document.getElementById('pipCanvas');
         const pipCtx = pipCanvas.getContext('2d');
         const pipVideo = document.getElementById('pipVideo');
-        const pipWrapper = document.getElementById('pipWrapper');
         const startPipBtn = document.getElementById('startPipBtn');
 
         let pipStream = null;
         let pipAnimId = null;
         let pipRunning = false;
 
-        // initial draw so PiP has content immediately
-        function drawPipOnce() {
-            const now = highResNow();
-            let dist = targets[activeKey] - now;
-            if (dist < 0) dist = 0;
+        // 绘制函数：把当前 activeKey 的倒计时（天 时 分 秒 毫秒 微秒）画到 pipCanvas
+        function drawPipFrame() {
+            // 使用高精度时间计算距离（保持与页面倒计时来源一致：targets/activeKey）
+            let now = highResNow(); // float ms
+            let distance = targets[activeKey] - now;
+            if (distance < 0) distance = 0;
 
-            const totalMs = Math.floor(dist);
-            const fractional = dist - totalMs;
+            const totalMs = Math.floor(distance); // integer ms
+            const frac = distance - totalMs; // fractional ms
             const days = Math.floor(totalMs / (1000 * 60 * 60 * 24));
             const hours = Math.floor((totalMs % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((totalMs % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((totalMs % (1000 * 60)) / 1000);
             const milliseconds = totalMs % 1000;
-            const microseconds = Math.floor(fractional * 1000); // 0-999
+            const microseconds = Math.floor(frac * 1000); // 0-999
 
-            // clear
+            // 背景
             pipCtx.clearRect(0,0,pipCanvas.width,pipCanvas.height);
-
-            // background and border
             pipCtx.fillStyle = '#000';
             pipCtx.fillRect(0,0,pipCanvas.width,pipCanvas.height);
-            pipCtx.strokeStyle = '#ffcc00';
-            pipCtx.lineWidth = 6;
+
+            // 边框
+            pipCtx.strokeStyle = '#ffc107';
+            pipCtx.lineWidth = 4;
             pipCtx.strokeRect(6,6,pipCanvas.width-12,pipCanvas.height-12);
 
-            // title
+            // 标题
             pipCtx.font = '18px sans-serif';
-            pipCtx.fillStyle = '#ffcc00';
+            pipCtx.fillStyle = '#ffc107';
             pipCtx.textAlign = 'center';
             pipCtx.textBaseline = 'middle';
-            pipCtx.shadowColor = '#ffcc00';
+            pipCtx.shadowColor = '#ffc107';
             pipCtx.shadowBlur = 10;
             const titleText = activeKey === 'newYear' ? '距离2026年元旦还有' : '距离2026年春节还有';
-            pipCtx.fillText(titleText, pipCanvas.width/2, 36);
+            pipCtx.fillText(titleText, pipCanvas.width/2, 32);
 
-            // main time (full levels)
+            // 主时间（天 时 分）
             pipCtx.shadowBlur = 0;
-            pipCtx.font = 'bold 40px sans-serif';
-            pipCtx.fillStyle = (dist > 0 && dist <= fiveMinutes) ? '#ff3b30' : '#ffffff';
+            pipCtx.font = 'bold 30px monospace';
+            const isLastTen = (targets[activeKey] - Date.now() <= fiveMinutes) && (targets[activeKey] - Date.now() > 0);
+            pipCtx.fillStyle = isLastTen ? '#ff3b30' : '#ffffff';
 
-            // Compose full string but break lines for readability
             const line1 = `${String(days).padStart(2,'0')}天 ${String(hours).padStart(2,'0')}时 ${String(minutes).padStart(2,'0')}分`;
-            const line2 = `${String(seconds).padStart(2,'0')}秒 ${String(milliseconds).padStart(3,'0')}毫秒 ${String(microseconds).padStart(3,'0')}微秒`;
+            pipCtx.fillText(line1, pipCanvas.width/2, pipCanvas.height/2 - 8);
 
-            // Draw lines
-            pipCtx.fillText(line1, pipCanvas.width/2, pipCanvas.height/2 - 6);
-            pipCtx.font = '16px sans-serif';
+            // 秒 毫秒 微秒
+            pipCtx.font = '14px monospace';
             pipCtx.fillStyle = '#ffecb3';
-            pipCtx.fillText(line2, pipCanvas.width/2, pipCanvas.height/2 + 34);
+            const line2 = `${String(seconds).padStart(2,'0')}秒 ${String(milliseconds).padStart(3,'0')}毫秒 ${String(microseconds).padStart(3,'0')}微秒`;
+            pipCtx.fillText(line2, pipCanvas.width/2, pipCanvas.height/2 + 28);
 
-            // live hint
+            // 小尾注
             pipCtx.font = '12px sans-serif';
-            pipCtx.fillStyle = '#bdbdbd';
+            pipCtx.fillStyle = '#9e9e9e';
             pipCtx.fillText('LIVE • 画中画倒计时', pipCanvas.width/2, pipCanvas.height - 16);
         }
 
         function pipLoop(){
-            drawPipOnce();
+            drawPipFrame();
             pipAnimId = requestAnimationFrame(pipLoop);
         }
 
         async function startPip(){
             if (pipRunning) return;
-            pipWrapper.style.display = 'block';
+            // capture stream
             try {
                 pipStream = pipCanvas.captureStream(30);
-            } catch(err) {
-                alert('无法获取画布流：' + (err && err.message ? err.message : err));
-                pipWrapper.style.display = 'none';
+            } catch (e) {
+                alert('无法创建画布流：' + (e && e.message ? e.message : e));
                 return;
             }
             pipVideo.srcObject = pipStream;
-            try { await pipVideo.play(); } catch(e) {}
+            try { await pipVideo.play(); } catch(e) { /* ignore play error */ }
+
+            // 用户手势触发 PiP（可能因浏览器策略 require user gesture）
             try {
                 if (typeof pipVideo.requestPictureInPicture === 'function') {
                     await pipVideo.requestPictureInPicture();
                 }
-            } catch(e) {}
+            } catch (e) {
+                // 某些浏览器/平台会抛出—但流仍然可用作为视频播放
+                console.warn('requestPictureInPicture failed:', e && e.message ? e.message : e);
+            }
+
             pipRunning = true;
             startPipBtn.textContent = '关闭画中画';
             if (pipAnimId) cancelAnimationFrame(pipAnimId);
@@ -1091,30 +1076,41 @@
                     await document.exitPictureInPicture();
                 }
             } catch(e){}
-            if (pipAnimId) { cancelAnimationFrame(pipAnimId); pipAnimId = null; }
-            try { if (pipStream) { pipStream.getTracks().forEach(t => t.stop()); pipStream = null; } } catch(e){}
-            pipVideo.pause();
-            pipVideo.srcObject = null;
-            pipWrapper.style.display = 'none';
             pipRunning = false;
             startPipBtn.textContent = '开启画中画';
+            if (pipAnimId) { cancelAnimationFrame(pipAnimId); pipAnimId = null; }
+            try { if (pipStream) { pipStream.getTracks().forEach(t => t.stop()); pipStream = null; } } catch(e){}
+            try { pipVideo.pause(); pipVideo.srcObject = null; } catch(e){}
         }
 
         startPipBtn.addEventListener('click', function(){
             if (!pipRunning) startPip(); else stopPip();
         });
 
-        window.addEventListener('beforeunload', () => {
-            if (pipAnimId) cancelAnimationFrame(pipAnimId);
-            if (pipStream) pipStream.getTracks().forEach(t => t.stop());
-            if (document.pictureInPictureElement && document.pictureInPictureElement === pipVideo) {
-                try { document.exitPictureInPicture(); } catch(e) {}
+        // 当用户在系统层面退出 PiP（例如手动关闭），我们同步状态
+        pipVideo.addEventListener('leavepictureinpicture', () => {
+            // ensure internal state cleared
+            if (pipRunning) {
+                if (pipAnimId) { cancelAnimationFrame(pipAnimId); pipAnimId = null; }
+                try { if (pipStream) pipStream.getTracks().forEach(t => t.stop()); } catch(e){}
+                pipRunning = false;
+                startPipBtn.textContent = '开启画中画';
             }
         });
 
-        // pre-draw so clicking PiP shows immediate content
-        drawPipOnce();
+        // 预绘一次，保证打开 PiP 时内容立即可见
+        drawPipFrame();
 
+        // 页面卸载清理
+        window.addEventListener('beforeunload', () => {
+            if (pipAnimId) cancelAnimationFrame(pipAnimId);
+            try { if (pipStream) pipStream.getTracks().forEach(t => t.stop()); } catch(e){}
+            try {
+                if (document.pictureInPictureElement && document.pictureInPictureElement === pipVideo) {
+                    document.exitPictureInPicture();
+                }
+            } catch(e){}
+        });
     })();
     </script>
 </body>
