--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
     <audio id="bgm" src="music/music-f.mp3" loop>
     </audio>
     <!-- 新增：Canvas（用于绘制倒计时，生成实时流） -->
-    <canvas id="pipCanvas" width="400" height="200" style="display: none;"></canvas>
+    <!-- 改为放到屏幕外（不能 display:none，某些浏览器/系统不渲染 display:none canvas） -->
+    <canvas id="pipCanvas" width="420" height="220" style="position:fixed; left:-9999px; top:-9999px; width:420px; height:220px;"></canvas>
     <!-- 新增：视频元素（隐藏，用于触发系统原生PiP） -->
     <video id="pipVideo" controls playsinline muted loop></video>
 
@@ -879,8 +880,7 @@
             activeKey = key;
             targetDate = targets[activeKey];
             updateTitleByKey(activeKey);
-            // 切换节日后同步更新Canvas绘制
-            if (ctx) drawPipCountdown();
+            // 不依赖外部 ctx — drawPipCountdown 自己会根据 activeKey 绘制
         }
 
         // 1. 全屏/退出全屏切换（保持原样）
@@ -972,16 +972,7 @@
                 timeNumberEls.forEach(el => el.classList.remove('red-text'));
             }
 
-            // 同步更新画中画Canvas内容
-            window.pipCountdownData = {
-                title: layerTitleEl.innerText,
-                days: daysText,
-                hours: hoursText,
-                minutes: minutesText,
-                seconds: secondsText,
-                milliseconds: millisecondsText,
-                isRed: distance > 0 && distance <= fiveMinutes
-            };
+            // 同步更新画中画Canvas内容 via activeKey (drawPipCountdown reads activeKey directly)
 
             requestAnimationFrame(updateCountdown);
         }
@@ -997,16 +988,27 @@
         const pipBtn = document.getElementById('pipBtn');
         let canvasStream = null;
         let isPiPActive = false;
+        let pipLoopId = null;
+
+        // 获取高精度 epoch ms
+        function highResNowMs() {
+            // performance.timeOrigin is supported in modern browsers
+            if (performance && performance.timeOrigin) {
+                return performance.timeOrigin + performance.now();
+            }
+            return Date.now();
+        }
 
         // 初始化Canvas流（注入视频，触发PiP）
         function initPipStream() {
             try {
                 // 生成Canvas实时流（30帧/秒，兼容iOS/安卓/桌面）
-                canvasStream = pipCanvas.captureStream(30);
+                canvasStream = pipCanvas.captureStream ? pipCanvas.captureStream(30) : null;
+                if (!canvasStream) throw new Error('captureStream not supported');
                 pipVideo.srcObject = canvasStream;
                 pipVideo.load();
-                // 预播放视频（用户点击前加载，避免延迟）
-                pipVideo.play().catch(() => {});
+                // 尝试预播放（如果允许）
+                pipVideo.play().catch(()=>{});
             } catch (err) {
                 pipBtn.disabled = true;
                 pipBtn.textContent = '画中画不支持';
@@ -1014,58 +1016,64 @@
             }
         }
 
-        // Canvas绘制画中画倒计时（和页面同步，显示所有数字）
-        function drawPipCountdown() {
-            const data = window.pipCountdownData || {};
-            if (!data.title) return;
+        // Canvas绘制画中画倒计时（直接根据 activeKey 和 targets 绘制）
+        function drawPipCountdownFrame() {
+            const nowMs = highResNowMs();
+            let distance = targets[activeKey] - nowMs;
+            if (distance < 0) distance = 0;
 
-            // 清空画布
-            pipCtx.clearRect(0, 0, pipCanvas.width, pipCanvas.height);
+            const totalMs = Math.floor(distance);
+            const frac = distance - totalMs;
+            const days = Math.floor(totalMs / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((totalMs % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((totalMs % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((totalMs % (1000 * 60)) / 1000);
+            const milliseconds = totalMs % 1000;
+            const microseconds = Math.floor(frac * 1000); // 0-999
 
-            // 绘制背景（匹配原倒计时风格）
-            pipCtx.fillStyle = 'rgba(22, 25, 41, 0.95)';
-            pipCtx.fillRect(0, 0, pipCanvas.width, pipCanvas.height);
+            const isLastTen = (targets[activeKey] - Date.now() <= fiveMinutes) && (targets[activeKey] - Date.now() > 0);
+
+            // Clear
+            pipCtx.clearRect(0,0,pipCanvas.width,pipCanvas.height);
+
+            // Background & border
+            pipCtx.fillStyle = '#0f1220';
+            pipCtx.fillRect(0,0,pipCanvas.width,pipCanvas.height);
             pipCtx.strokeStyle = '#ffc107';
-            pipCtx.lineWidth = 2;
-            pipCtx.strokeRect(10, 10, pipCanvas.width - 20, pipCanvas.height - 20);
+            pipCtx.lineWidth = 3;
+            pipCtx.strokeRect(8,8,pipCanvas.width-16,pipCanvas.height-16);
 
-            // 绘制标题
-            pipCtx.font = '16px bold';
+            // Title
+            pipCtx.font = 'bold 18px sans-serif';
             pipCtx.fillStyle = '#ffc107';
             pipCtx.textAlign = 'center';
-            pipCtx.fillText(data.title, pipCanvas.width / 2, 30);
+            pipCtx.textBaseline = 'middle';
+            const title = activeKey === 'newYear' ? '距离2026年元旦还有' : '距离2026年春节还有';
+            pipCtx.fillText(title, pipCanvas.width/2, 28);
 
-            // 绘制时间数字（天/时/分/秒/微秒，紧凑排版）
-            const timeItems = [
-                { num: data.days, label: '天' },
-                { num: data.hours, label: '时' },
-                { num: data.minutes, label: '分' },
-                { num: data.seconds, label: '秒' },
-                { num: data.milliseconds, label: '微秒' }
-            ];
-            const itemWidth = (pipCanvas.width - 40) / timeItems.length;
-            const itemTop = 60;
+            // Main line (days hours minutes)
+            pipCtx.font = 'bold 28px monospace';
+            pipCtx.fillStyle = isLastTen ? '#ff3b30' : '#ffffff';
+            const line1 = `${String(days).padStart(2,'0')}天 ${String(hours).padStart(2,'0')}时 ${String(minutes).padStart(2,'0')}分`;
+            pipCtx.fillText(line1, pipCanvas.width/2, pipCanvas.height/2 - 6);
 
-            timeItems.forEach((item, index) => {
-                const x = 20 + itemWidth * index + itemWidth / 2;
+            // Secondary line (seconds milliseconds microseconds)
+            pipCtx.font = '14px monospace';
+            pipCtx.fillStyle = '#ffecb3';
+            const line2 = `${String(seconds).padStart(2,'0')}秒 ${String(milliseconds).padStart(3,'0')}毫秒 ${String(microseconds).padStart(3,'0')}微秒`;
+            pipCtx.fillText(line2, pipCanvas.width/2, pipCanvas.height/2 + 28);
 
-                // 绘制数字（最后10分钟变红）
-                pipCtx.font = '24px bold';
-                pipCtx.fillStyle = data.isRed ? '#ff3b30' : '#fff';
-                pipCtx.textAlign = 'center';
-                pipCtx.fillText(item.num, x, itemTop + 25);
-
-                // 绘制标签
-                pipCtx.font = '12px';
-                pipCtx.fillStyle = '#ffecb3';
-                pipCtx.fillText(item.label, x, itemTop + 55);
-            });
-
-            // 持续绘制
-            requestAnimationFrame(drawPipCountdown);
+            // Footer
+            pipCtx.font = '12px sans-serif';
+            pipCtx.fillStyle = '#9e9e9e';
+            pipCtx.fillText('LIVE • 画中画倒计时', pipCanvas.width/2, pipCanvas.height - 18);
         }
 
-        // 切换系统原生画中画
+        function pipLoop() {
+            drawPipCountdownFrame();
+            pipLoopId = requestAnimationFrame(pipLoop);
+        }
+
         async function togglePip() {
             if (!pipVideo || !document.pictureInPictureEnabled) {
                 alert('当前浏览器不支持系统原生画中画');
@@ -1080,27 +1088,27 @@
                     pipBtn.textContent = '画中画';
                 } else {
                     // 进入PiP（确保视频在播放）
-                    if (pipVideo.paused) await pipVideo.play();
+                    try { if (pipVideo.paused) await pipVideo.play(); } catch(e){}
                     await pipVideo.requestPictureInPicture();
                     isPiPActive = true;
                     pipBtn.textContent = '退出画中画';
                 }
             } catch (err) {
-                alert('画中画操作失败：' + err.message);
+                alert('画中画操作失败：' + (err && err.message ? err.message : err));
                 console.error('PiP切换失败：', err);
             }
         }
 
-        // 绑定画中画按钮事件
         pipBtn.addEventListener('click', togglePip);
 
-        // 初始化画中画相关功能
+        // Ensure we start the canvas draw loop so stream has frames even before PiP is opened
         window.addEventListener('load', () => {
             initPipStream();
-            drawPipCountdown();
+            // always start drawing to canvas (so captureStream provides non-black frames)
+            if (!pipLoopId) pipLoop();
         });
 
-        // 页面销毁时清理画中画资源
+        // Cleanup
         window.addEventListener('beforeunload', () => {
             if (canvasStream) {
                 canvasStream.getTracks().forEach(track => track.stop());
@@ -1108,7 +1116,16 @@
             if (document.pictureInPictureElement) {
                 document.exitPictureInPicture().catch(() => {});
             }
+            if (pipLoopId) cancelAnimationFrame(pipLoopId);
         });
+
+        // Also if PiP is closed externally (user action), sync button text/state
+        document.addEventListener('webkitpresentationmodechanged', function(){ /* noop for some iOS versions */ });
+        pipVideo.addEventListener('leavepictureinpicture', () => {
+            // update UI state
+            pipBtn.textContent = '画中画';
+        });
+
     </script>
 </body>
 </html>
